@@ -2,17 +2,16 @@ package io.kestra.core.services;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.FlowWithSource;
 import io.kestra.core.models.triggers.AbstractTrigger;
 import io.kestra.core.plugins.PluginRegistry;
 import io.kestra.core.repositories.FlowRepositoryInterface;
-import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.serializers.JacksonMapper;
 import io.kestra.core.serializers.YamlFlowParser;
 import io.kestra.core.utils.ListUtils;
-import io.micronaut.context.ApplicationContext;
 import io.micronaut.context.annotation.Value;
 import io.micronaut.core.annotation.Nullable;
 import jakarta.inject.Inject;
@@ -39,11 +38,9 @@ import java.util.stream.StreamSupport;
 public class FlowService {
     private final IllegalStateException NO_REPOSITORY_EXCEPTION = new IllegalStateException("No flow repository found. Make sure the `kestra.repository.type` property is set.");
 
-    @Inject
-    RunContextFactory runContextFactory;
-
-    @Inject
-    ConditionService conditionService;
+    private static final ObjectMapper NON_DEFAULT_OBJECT_MAPPER = JacksonMapper.ofJson()
+        .copy()
+        .setSerializationInclusion(JsonInclude.Include.NON_DEFAULT);
 
     @Inject
     Optional<FlowRepositoryInterface> flowRepository;
@@ -52,10 +49,7 @@ public class FlowService {
     YamlFlowParser yamlFlowParser;
 
     @Inject
-    TaskDefaultService taskDefaultService;
-
-    @Inject
-    ApplicationContext applicationContext;
+    PluginDefaultService pluginDefaultService;
 
     @Inject
     PluginRegistry pluginRegistry;
@@ -64,6 +58,10 @@ public class FlowService {
     private String systemFlowNamespace;
 
     public FlowWithSource importFlow(String tenantId, String source) {
+        return this.importFlow(tenantId, source, false);
+    }
+
+    public FlowWithSource importFlow(String tenantId, String source, boolean dryRun) {
         Flow withTenant = yamlFlowParser.parse(source, Flow.class).toBuilder()
             .tenantId(tenantId)
             .build();
@@ -73,10 +71,23 @@ public class FlowService {
         }
 
         FlowRepositoryInterface flowRepository = this.flowRepository.get();
-        return flowRepository
-            .findById(withTenant.getTenantId(), withTenant.getNamespace(), withTenant.getId())
-            .map(previous -> flowRepository.update(withTenant, previous, source, taskDefaultService.injectDefaults(withTenant)))
-            .orElseGet(() -> flowRepository.create(withTenant, source, taskDefaultService.injectDefaults(withTenant)));
+        Optional<FlowWithSource> flowWithSource = flowRepository
+            .findByIdWithSource(withTenant.getTenantId(), withTenant.getNamespace(), withTenant.getId(), Optional.empty(), true);
+        if (dryRun) {
+            return flowWithSource
+                .map(previous -> {
+                    if (previous.equals(withTenant, source) && !previous.isDeleted()) {
+                        return previous;
+                    } else {
+                        return FlowWithSource.of(withTenant.toBuilder().revision(previous.getRevision() + 1).build(), source);
+                    }
+                })
+                .orElseGet(() -> FlowWithSource.of(withTenant, source).toBuilder().revision(1).build());
+        }
+
+        return flowWithSource
+            .map(previous -> flowRepository.update(withTenant, previous, source, pluginDefaultService.injectDefaults(withTenant)))
+            .orElseGet(() -> flowRepository.create(withTenant, source, pluginDefaultService.injectDefaults(withTenant)));
     }
 
     public List<FlowWithSource> findByNamespaceWithSource(String tenantId, String namespace) {
@@ -85,6 +96,38 @@ public class FlowService {
         }
 
         return flowRepository.get().findByNamespaceWithSource(tenantId, namespace);
+    }
+
+    public List<Flow> findAll(String tenantId) {
+        if (flowRepository.isEmpty()) {
+            throw NO_REPOSITORY_EXCEPTION;
+        }
+
+        return flowRepository.get().findAll(tenantId);
+    }
+
+    public List<Flow> findByNamespace(String tenantId, String namespace) {
+        if (flowRepository.isEmpty()) {
+            throw NO_REPOSITORY_EXCEPTION;
+        }
+
+        return flowRepository.get().findByNamespace(tenantId, namespace);
+    }
+
+    public List<Flow> findByNamespacePrefix(String tenantId, String namespacePrefix) {
+        if (flowRepository.isEmpty()) {
+            throw NO_REPOSITORY_EXCEPTION;
+        }
+
+        return flowRepository.get().findByNamespacePrefix(tenantId, namespacePrefix);
+    }
+
+    public Flow delete(Flow flow) {
+        if (flowRepository.isEmpty()) {
+            throw NO_REPOSITORY_EXCEPTION;
+        }
+
+        return flowRepository.get().delete(flow);
     }
 
     public Stream<Flow> keepLastVersion(Stream<Flow> stream) {
@@ -96,47 +139,71 @@ public class FlowService {
     }
 
     public List<String> warnings(Flow flow) {
-        if (flow != null && flow.getNamespace() != null && flow.getNamespace().equals(systemFlowNamespace)) {
-            return List.of("The system namespace is reserved for background workflows intended to perform routine tasks such as sending alerts and purging logs. Please use another namespace name.");
+        if (flow == null) {
+            return Collections.emptyList();
         }
-        return Collections.emptyList();
+
+        List<String> warnings = new ArrayList<>();
+        if (flow.getNamespace() != null && flow.getNamespace().equals(systemFlowNamespace)) {
+            warnings.add("The system namespace is reserved for background workflows intended to perform routine tasks such as sending alerts and purging logs. Please use another namespace name.");
+        }
+
+        List<AbstractTrigger> triggers = flow.getTriggers();
+        if (
+            triggers != null &&
+                triggers.stream().anyMatch(trigger -> {
+                    if (trigger instanceof io.kestra.plugin.core.trigger.Flow flowTrigger) {
+                        return Optional.ofNullable(flowTrigger.getConditions()).map(List::isEmpty).orElse(true);
+                    }
+
+                    return false;
+                    })
+        ) {
+            warnings.add("This flow will be triggered for EVERY execution of EVERY flow on your instance. We recommend adding the conditions property to the Flow trigger.");
+        }
+
+        return warnings;
     }
 
-    public List<String> aliasesPaths(String flowSource) {
+    public List<Relocation> relocations(String flowSource) {
         try {
-            List<String> aliases = pluginRegistry.plugins().stream().flatMap(plugin -> plugin.getAliases().keySet().stream()).toList();
+            Map<String, Class<?>> aliases = pluginRegistry.plugins().stream()
+                .flatMap(plugin -> plugin.getAliases().values().stream())
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
             Map<String, Object> stringObjectMap = JacksonMapper.ofYaml().readValue(flowSource, JacksonMapper.MAP_TYPE_REFERENCE);
-            return aliasesPaths(aliases, stringObjectMap);
+            return relocations(aliases, stringObjectMap);
         } catch (JsonProcessingException e) {
             // silent failure (we don't compromise the app / response for warnings)
             return Collections.emptyList();
         }
     }
+    public record Relocation(String from, String to) {}
 
-    private List<String> aliasesPaths(List<String> aliases, Map<String, Object> stringObjectMap) {
-        List<String> warnings = new ArrayList<>();
+    private List<Relocation> relocations(Map<String, Class<?>> aliases, Map<String, Object> stringObjectMap) {
+        List<Relocation> relocations = new ArrayList<>();
         for (Map.Entry<String, Object> entry : stringObjectMap.entrySet()) {
-            if (entry.getValue() instanceof String value && aliases.contains(value)) {
-                warnings.add(value);
+            if (entry.getValue() instanceof String value && aliases.containsKey(value)) {
+                relocations.add(new Relocation(value, aliases.get(value).getName()));
             }
 
             if (entry.getValue() instanceof Map<?, ?> value) {
-                warnings.addAll(aliasesPaths(aliases, (Map<String, Object>) value));
+                relocations.addAll(relocations(aliases, (Map<String, Object>) value));
             }
 
             if (entry.getValue() instanceof List<?> value) {
-                List<String> listAliases = value.stream().flatMap(item -> {
+                List<Relocation> listAliases = value.stream().flatMap(item -> {
                     if (item instanceof Map<?, ?> map) {
-                        return aliasesPaths(aliases, (Map<String, Object>) map).stream();
+                        return relocations(aliases, (Map<String, Object>) map).stream();
                     }
                     return Stream.empty();
                 }).toList();
-                warnings.addAll(listAliases);
+                relocations.addAll(listAliases);
             }
         }
 
-        return warnings;
+        return relocations;
     }
+
 
     private Stream<String> deprecationTraversal(String prefix, Object object) {
         if (object == null || ClassUtils.isPrimitiveOrWrapper(object.getClass()) || String.class.equals(object.getClass())) {
@@ -277,11 +344,7 @@ public class FlowService {
 
     @SneakyThrows
     private static String toYamlWithoutDefault(Object object) throws JsonProcessingException {
-        String json = JacksonMapper
-            .ofJson()
-            .copy()
-            .setSerializationInclusion(JsonInclude.Include.NON_DEFAULT)
-            .writeValueAsString(object);
+        String json = NON_DEFAULT_OBJECT_MAPPER.writeValueAsString(object);
 
         Object map = fixSnakeYaml(JacksonMapper.toMap(json));
 
@@ -348,6 +411,24 @@ public class FlowService {
     public void checkAllowedNamespace(String tenant, String namespace, String fromTenant, String fromNamespace) {
         if (!isAllowedNamespace(tenant, namespace, fromTenant, fromNamespace)) {
             throw new IllegalArgumentException("Namespace " + namespace + " is not allowed.");
+        }
+    }
+
+    /**
+     * Return true if the namespace is allowed from all the namespace in the 'fromTenant' tenant.
+     * As namespace restriction is an EE feature, this will always return true in OSS.
+     */
+    public boolean areAllowedAllNamespaces(String tenant, String fromTenant, String fromNamespace) {
+        return true;
+    }
+
+    /**
+     * Check that the namespace is allowed from all the namespace in the 'fromTenant' tenant.
+     * If not, throw an IllegalArgumentException.
+     */
+    public void checkAllowedAllNamespaces(String tenant, String fromTenant, String fromNamespace) {
+        if (!areAllowedAllNamespaces(tenant, fromTenant, fromNamespace)) {
+            throw new IllegalArgumentException("All namespaces are not allowed, you should either filter on a namespace or configure all namespaces to allow your namespace.");
         }
     }
 }
